white line issue on mobile devices fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
-body {
+html, body {
+    width: 100%;
     overflow-x: hidden;
 }
 .navbar {
-    padding: 0rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     padding-bottom: 0;
 }
 
@@ -39,7 +41,7 @@ body {
 .callout-container-fluid{
     height: 70vh;
     width: 100%;
-    background: url("images/lake.jpg") no-repeat center center fixed; 
+    background: url("../images/lake.jpg") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -53,6 +55,9 @@ body {
     margin-top: 5rem; 
    }
 
+.col-12 {
+    padding: 0px;
+}
    .container-fluid{
     margin-right: 0;
     margin-left: 0;
@@ -83,6 +88,7 @@ body {
 .main-heading {
     font-family: 'Amatic SC';
     padding-top: 2rem;
+    margin-right: 0rem;
 }
 
 /*---------City and Culture---------*/
@@ -105,4 +111,11 @@ body {
 }
 .card {
     width: 28rem;
+}
+
+@media only screen and (max-width: 700px) {
+    .card-deck {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
